fix: on iphone chrome reset settings not accessible

--- a/src/components/Navbar/Drawer/Drawer.module.scss
+++ b/src/components/Navbar/Drawer/Drawer.module.scss
@@ -63,7 +63,7 @@
 }
 
 .bodyWithBottomPadding {
-  padding-block-end: calc(4 * var(--spacing-large));
+  padding-block-end: calc(8 * var(--spacing-large));
 }
 
 .navigationBodyContainer {
